Allow Debugging WarFare / Client.

--- a/client/WarFare/WarFare.vcxproj
+++ b/client/WarFare/WarFare.vcxproj
@@ -90,7 +90,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <IgnoreSpecificDefaultLibraries>msvcrt;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
-      <OutputFile>NetCatOnLine_Debug.exe</OutputFile>
+      <OutputFile>KnightOnLine_Debug.exe</OutputFile>
       <AdditionalDependencies>implode.lib;winmm.lib;imm32.lib;ddraw.lib;d3d8.lib;d3dx8.lib;dsound.lib;dxguid.lib;dxerr8.lib;wsock32.lib;DInput8.lib;odbc32.lib;odbccp32.lib;NAFXCWD.LIB;LIBCMTD.LIB;..\JPEG\jpegLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -506,6 +506,11 @@
   <ItemGroup>
     <Library Include="Implode.lib" />
     <Library Include="JvCryption.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="WarFare_BUILD.vcxproj">
+      <Project>{4c1d27e1-3b5c-4af6-88e4-40d9415ad623}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
