--- a/client/WarFare/WarFare_BUILD.vcxproj
+++ b/client/WarFare/WarFare_BUILD.vcxproj
@@ -50,39 +50,17 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
-      <SDLCheck>true</SDLCheck>
-      <ConformanceMode>true</ConformanceMode>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-    </Link>
     <PostBuildEvent>
       <Command>set PATH=$(ProjectDir)..\..\vendor\VC6\Common\MSDev98\Bin;$(ProjectDir)..\..\vendor\VC6\VC98\BIN;$(ProjectDir)..\..\vendor\VC6\Common\TOOLS;C:\ko\VC6\Common\TOOLS\WINNT;%PATH%
 cd $(ProjectDir)
-nmake /f WarFare.mak CFG="WarFare - Win32 Debug" /b /a INCLUDE="$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE" LIB="$(ProjectDir)..\..\vendor\DXSDK8\Lib\x86;$(ProjectDir)..\..\vendor\VC6\VC98\LIB;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\LIB" CL="/D DIRECTINPUT_VERSION=0x0800"</Command>
+nmake /f WarFare.mak CFG="WarFare - Win32 $(Configuration)" /b /a INCLUDE="$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE" LIB="$(ProjectDir)..\..\vendor\DXSDK8\Lib\x86;$(ProjectDir)..\..\vendor\VC6\VC98\LIB;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\LIB" CL="/D DIRECTINPUT_VERSION=0x0800"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>MaxSpeed</Optimization>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <SDLCheck>true</SDLCheck>
-      <ConformanceMode>true</ConformanceMode>
-    </ClCompile>
-    <Link>
-      <SubSystem>Console</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
-    </Link>
     <PostBuildEvent>
       <Command>set PATH=$(ProjectDir)..\..\vendor\VC6\Common\MSDev98\Bin;$(ProjectDir)..\..\vendor\VC6\VC98\BIN;$(ProjectDir)..\..\vendor\VC6\Common\TOOLS;C:\ko\VC6\Common\TOOLS\WINNT;%PATH%
 cd $(ProjectDir)
-nmake /f WarFare.mak CFG="WarFare - Win32 Release" /b /a INCLUDE="$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE" LIB="$(ProjectDir)..\..\vendor\DXSDK8\Lib\x86;$(ProjectDir)..\..\vendor\VC6\VC98\LIB;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\LIB" CL="/D DIRECTINPUT_VERSION=0x0800"</Command>
+nmake /f WarFare.mak CFG="WarFare - Win32 $(Configuration)" /b /a INCLUDE="$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE" LIB="$(ProjectDir)..\..\vendor\DXSDK8\Lib\x86;$(ProjectDir)..\..\vendor\VC6\VC98\LIB;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\LIB" CL="/D DIRECTINPUT_VERSION=0x0800"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
