Ignore some more files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,18 @@ Release/
 Debug/
 vendor/
 *.exe
+*.lib
 *.pdb
 *.plg
 *.aps
 *.opt
 *.ncb
 *.ilk
+*.sbr
+*.bsc
+*.pch
+*.obj
+*.idb
 *.vcxproj.user
 UpgradeLog.htm
 Log.txt
