Make N3FXE build again.
Just note that the mess with the include directories will be fixed
later.

--- a/src/tool/N3FE/N3FE.vcxproj
+++ b/src/tool/N3FE/N3FE.vcxproj
@@ -66,7 +66,7 @@
       <PrecompiledHeaderOutputFile>.\Release\N3FE.pch</PrecompiledHeaderOutputFile>
       <ObjectFileName>.\Release\</ObjectFileName>
       <ProgramDataBaseFileName>.\Release\</ProgramDataBaseFileName>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\engine;$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -107,7 +107,7 @@
       <ObjectFileName>.\Debug\</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug\</ProgramDataBaseFileName>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\..\engine;$(ProjectDir)..\..\vendor\DXSDK8\Include;$(ProjectDir)..\..\vendor\VC6\VC98\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\MFC\INCLUDE;$(ProjectDir)..\..\vendor\VC6\VC98\ATL\INCLUDE</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -133,27 +133,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Common Control\PropertyList.cpp" />
-    <ClCompile Include="..\N3Base\BitMapFile.cpp" />
-    <ClCompile Include="..\N3BASE\LogWriter.cpp" />
-    <ClCompile Include="..\N3Base\N3AlphaPrimitiveManager.cpp" />
-    <ClCompile Include="..\N3Base\N3AnimControl.cpp" />
-    <ClCompile Include="..\N3Base\N3AnimKey.cpp" />
-    <ClCompile Include="..\N3Base\N3Base.cpp" />
-    <ClCompile Include="..\N3Base\N3BaseFileAccess.cpp" />
-    <ClCompile Include="..\N3Base\N3Camera.cpp" />
-    <ClCompile Include="..\N3Base\N3Eng.cpp" />
-    <ClCompile Include="..\N3Base\N3EngTool.cpp" />
-    <ClCompile Include="..\N3BASE\N3IMesh.cpp" />
-    <ClCompile Include="..\N3Base\N3Light.cpp" />
-    <ClCompile Include="..\N3BASE\N3PMesh.cpp" />
-    <ClCompile Include="..\N3BASE\N3PMeshCreate.cpp" />
-    <ClCompile Include="..\N3BASE\N3PMeshInstance.cpp" />
-    <ClCompile Include="..\N3BASE\N3Shape.cpp" />
-    <ClCompile Include="..\N3Base\N3Texture.cpp" />
-    <ClCompile Include="..\N3Base\N3Transform.cpp" />
-    <ClCompile Include="..\N3BASE\N3TransformCollision.cpp" />
-    <ClCompile Include="..\N3BASE\N3VMesh.cpp" />
+    <ClCompile Include="..\Widget\PropertyList.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\LogWriter.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AnimControl.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3AnimKey.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Camera.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3IMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Light.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3PMesh.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3PMeshCreate.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3PMeshInstance.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Shape.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3Transform.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3TransformCollision.cpp" />
+    <ClCompile Include="..\..\engine\N3Base\N3VMesh.cpp" />
     <ClCompile Include="DlgBrowsePath.cpp" />
     <ClCompile Include="DlgRename.cpp" />
     <ClCompile Include="FormViewControl.cpp" />
@@ -167,31 +167,31 @@
     <ResourceCompile Include="N3FE.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Common Control\PropertyList.h" />
-    <ClInclude Include="..\N3Base\BitMapFile.h" />
-    <ClInclude Include="..\N3BASE\LogWriter.h" />
-    <ClInclude Include="..\N3Base\My_3DStruct.h" />
-    <ClInclude Include="..\N3Base\N3AlphaPrimitiveManager.h" />
-    <ClInclude Include="..\N3Base\N3AnimControl.h" />
-    <ClInclude Include="..\N3Base\N3AnimKey.h" />
-    <ClInclude Include="..\N3Base\N3Base.h" />
-    <ClInclude Include="..\N3Base\N3BaseFileAccess.h" />
-    <ClInclude Include="..\N3Base\N3Camera.h" />
-    <ClInclude Include="..\N3Base\N3Eng.h" />
-    <ClInclude Include="..\N3Base\N3EngTool.h" />
-    <ClInclude Include="..\N3Base\N3FXDef.h" />
-    <ClInclude Include="..\N3Base\N3FXPartBase.h" />
-    <ClInclude Include="..\N3Base\N3FXPartParticles.h" />
-    <ClInclude Include="..\N3BASE\N3IMesh.h" />
-    <ClInclude Include="..\N3Base\N3Light.h" />
-    <ClInclude Include="..\N3BASE\N3PMesh.h" />
-    <ClInclude Include="..\N3BASE\N3PMeshCreate.h" />
-    <ClInclude Include="..\N3BASE\N3PMeshInstance.h" />
-    <ClInclude Include="..\N3BASE\N3Shape.h" />
-    <ClInclude Include="..\N3Base\N3Texture.h" />
-    <ClInclude Include="..\N3Base\N3Transform.h" />
-    <ClInclude Include="..\N3BASE\N3TransformCollision.h" />
-    <ClInclude Include="..\N3BASE\N3VMesh.h" />
+    <ClInclude Include="..\Widget\PropertyList.h" />
+    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h" />
+    <ClInclude Include="..\..\engine\N3Base\LogWriter.h" />
+    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AnimControl.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3AnimKey.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Base.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Camera.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Eng.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXDef.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartBase.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartParticles.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3IMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Light.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3PMesh.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3PMeshCreate.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3PMeshInstance.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Shape.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Texture.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3Transform.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3TransformCollision.h" />
+    <ClInclude Include="..\..\engine\N3Base\N3VMesh.h" />
     <ClInclude Include="DlgBrowsePath.h" />
     <ClInclude Include="DlgRename.h" />
     <ClInclude Include="FormViewControl.h" />
