--- a/src/tool/N3FE/N3FE.vcxproj.filters
+++ b/src/tool/N3FE/N3FE.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\N3Base\BitMapFile.cpp">
+    <ClCompile Include="..\..\engine\N3Base\BitMapFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DlgBrowsePath.cpp">
@@ -27,34 +27,34 @@
     <ClCompile Include="FormViewControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\LogWriter.cpp">
+    <ClCompile Include="..\..\engine\N3Base\LogWriter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MainFrm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3AlphaPrimitiveManager.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3AnimControl.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3AnimControl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3AnimKey.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3AnimKey.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3Base.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Base.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3BaseFileAccess.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3BaseFileAccess.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3Camera.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3Eng.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Eng.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3EngTool.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3EngTool.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="N3FE.cpp">
@@ -63,37 +63,37 @@
     <ClCompile Include="N3FEView.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3IMesh.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3IMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3Light.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Light.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3PMesh.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3PMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3PMeshCreate.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3PMeshCreate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3PMeshInstance.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3PMeshInstance.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3Shape.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Shape.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3Texture.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3Base\N3Transform.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3Transform.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3TransformCollision.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3TransformCollision.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\N3BASE\N3VMesh.cpp">
+    <ClCompile Include="..\..\engine\N3Base\N3VMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Common Control\PropertyList.cpp">
+    <ClCompile Include="..\Widget\PropertyList.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ShellTree.cpp">
@@ -109,7 +109,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\N3Base\BitMapFile.h">
+    <ClInclude Include="..\..\engine\N3Base\BitMapFile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DlgBrowsePath.h">
@@ -121,37 +121,37 @@
     <ClInclude Include="FormViewControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\LogWriter.h">
+    <ClInclude Include="..\..\engine\N3Base\LogWriter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MainFrm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\My_3DStruct.h">
+    <ClInclude Include="..\..\engine\N3Base\My_3DStruct.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3AlphaPrimitiveManager.h">
+    <ClInclude Include="..\..\engine\N3Base\N3AlphaPrimitiveManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3AnimControl.h">
+    <ClInclude Include="..\..\engine\N3Base\N3AnimControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3AnimKey.h">
+    <ClInclude Include="..\..\engine\N3Base\N3AnimKey.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3Base.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Base.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3BaseFileAccess.h">
+    <ClInclude Include="..\..\engine\N3Base\N3BaseFileAccess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3Camera.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3Eng.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Eng.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3EngTool.h">
+    <ClInclude Include="..\..\engine\N3Base\N3EngTool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="N3FE.h">
@@ -160,46 +160,46 @@
     <ClInclude Include="N3FEView.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3FXDef.h">
+    <ClInclude Include="..\..\engine\N3Base\N3FXDef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3FXPartBase.h">
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3FXPartParticles.h">
+    <ClInclude Include="..\..\engine\N3Base\N3FXPartParticles.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3IMesh.h">
+    <ClInclude Include="..\..\engine\N3Base\N3IMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3Light.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Light.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3PMesh.h">
+    <ClInclude Include="..\..\engine\N3Base\N3PMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3PMeshCreate.h">
+    <ClInclude Include="..\..\engine\N3Base\N3PMeshCreate.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3PMeshInstance.h">
+    <ClInclude Include="..\..\engine\N3Base\N3PMeshInstance.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3Shape.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Shape.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3Texture.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3Base\N3Transform.h">
+    <ClInclude Include="..\..\engine\N3Base\N3Transform.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3TransformCollision.h">
+    <ClInclude Include="..\..\engine\N3Base\N3TransformCollision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\N3BASE\N3VMesh.h">
+    <ClInclude Include="..\..\engine\N3Base\N3VMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\Common Control\PropertyList.h">
+    <ClInclude Include="..\Widget\PropertyList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
